Fix scroll position and overflow-x. Admittedly, the jQuery here is sketch. If you know better, tell me because I am curious to know whats the right way to do this.

--- a/public/stylesheets/layout.less
+++ b/public/stylesheets/layout.less
@@ -135,11 +135,12 @@ html {
             bottom: 50px;
             margin: 0;
             max-height: 100%;
-            overflow-x: hidden;
+            overflow-x: auto;
             overflow-y: auto;
             padding: 0;
             position: absolute;
             top: 118px;
+            white-space: pre-wrap;
           }
 
           #users {
